dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp-service
spec:
  #ClusterIP: None
  #type: LoadBalancer
  selector:
    app: myapp
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
