dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend
  labels:
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'

 
    #alb.ingress.kubernetes.io/security-groups: sg-02a9836e2842185e9
    alb.ingress.kubernetes.io/success-codes: 200,301,302
  namespace: myapp
spec:
  ingressClassName: nginx
  rules:
    - host: www.mynginx.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: myapp-service
                port:  
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                 name: ssl-redirect
                 port:     
                   name: use-annotation
